# Institutional-quant-research-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: base.yaml
docs/: METHODOLOGY.md  RESUME.md
quant_research_lab/: __init__.py  __main__.py  backtest.py  cli.py  config.py  data.py  features.py  metrics.py  models.py  pipeline.py  portfolio.py  reports.py
tests/: test_metrics.py  test_pipeline_smoke.py
