[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "institutional-quant-research-lab"
version = "0.1.0"
description = "Cross-sectional equity alpha research and backtesting platform."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "PyYAML>=6.0",
]

[project.scripts]
quant-lab = "quant_research_lab.cli:main"

[tool.setuptools.packages.find]
include = ["quant_research_lab*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 92
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
